--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+@media (max-width: 800px) {
+  .header {grid-area: 1 / span 6;}
+  .menu {grid-area: 2 / span 1;}
+  .content {grid-area: 2 / span 4;}
+  .facts {grid-area: 3 / span 6;}
+  .footer {grid-area: 4 / span 6;}
+}
+
+
 header{
     padding: 0.625em;
     background: black;
@@ -94,12 +103,4 @@ footer{
 }
 footer img{
     width: 5%;
-}
-
-@media (min-width: 600px) {
-  .header {grid-area: 1 / span 6;}
-  .menu {grid-area: 2 / span 1;}
-  .content {grid-area: 2 / span 4;}
-  .facts {grid-area: 3 / span 6;}
-  .footer {grid-area: 4 / span 6;}
 }
