--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   .header {grid-area: 1 / span 6;}
   .menu {grid-area: 2 / span 1;}
-  .content {grid-area: 2 / span 4;}
+  .content {flex-direction: column;}
   .facts {grid-area: 3 / span 6;}
   .footer {grid-area: 4 / span 6;}
 }
@@ -72,14 +72,7 @@ div{
 div p{
     margin-left: 2em;
 }
-div .conteudo{
-    display: inline-flex;
-    align-items: center;
-}
-.conteudo img{
-    background-color: black;
-    justify-content: flex-end;
-}
+
 .conteiner{
     background-color: rgb(54, 50, 58);
     padding: 0.625em;
@@ -87,11 +80,24 @@ div .conteudo{
     color: rgb(181, 0, 0);
     margin: 0;
 }
+
 .conteudo{
     margin: 1em;
     padding: 1em;
     border: 0.215em dotted black;
 }
+.conteudo p{
+    text-align: center;
+}
+div .conteudo{
+    display: flex;
+    align-items: center;
+}
+.conteudo img{
+    background-color: black;
+    justify-content: flex-end;
+}
+
 footer{
     display: flex;
     flex-direction: row-reverse;
