agilização de codigo css

--- a/index.css
+++ b/index.css
@@ -112,7 +112,6 @@ footer img{
 
 footer p:last-child{
     align-self: center;
-    display: block;
-    text-align: center;
+    display: flex;
     margin-right: auto;
 }
