--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@
   .facts {grid-area: 3 / span 6;}
   .footer {grid-area: 4 / span 6;}
 }
-
+@media (min-width: 700px) {
+    div p{margin-left: 2em;}
+}
 
 header{
     padding: 0.625em;
@@ -56,7 +58,6 @@ header a.active{
     background-color: rgb(30, 30, 30);
 }
 
-
 header+div{
     margin-bottom: 3em;
     margin-left: 1em;
@@ -68,9 +69,6 @@ body{
 div{
     max-width: auto;
     margin: 1em;
-}
-div p{
-    margin-left: 2em;
 }
 
 .conteiner{
@@ -97,21 +95,47 @@ div .conteudo{
     background-color: black;
     justify-content: flex-end;
 }
-
+.conteudo2{
+    margin: 1em;
+    background-color: rgb(116, 116, 116);
+    padding: 1em;
+    border: 0.215em solid black;
+    flex-direction: column;
+    color: whitesmoke;
+    width: auto;
+}
+.conteudo2 p{
+    text-align: center;
+}
+div .conteudo2{
+    display: flex;
+    align-items: center;
+}
+.conteudo2 img{
+    margin: 2em auto 1em auto;
+    background-color: black;
+    justify-content: flex-end;
+    width: 50%;
+}
 footer{
     display: flex;
     flex-direction: row-reverse;
     padding: 0.625em;
     background: black;
     text-align: center;
+    align-items: center;
     color: white;
 }
 footer img{
     width: 4em;
+    margin-left: 3em;
+}
+footer a{
+    text-decoration: none;
+    color: white;
 }
 
 footer p:last-child{
-    align-self: center;
     display: flex;
     margin-right: auto;
 }
